# wayback-fetcher

./: .gitignore  LICENSE  README-RU.md  README.md  TODO.md  pyproject.toml  update_translations.sh  wayback_fetcher.py
locale/en/LC_MESSAGES/: wayback_fetcher.mo  wayback_fetcher.po
locale/ru/LC_MESSAGES/: wayback_fetcher.mo  wayback_fetcher.po
